Fix vertical scrolling on material page on iOS

--- a/src/app/component/tool-layout/_tool-layout.scss
+++ b/src/app/component/tool-layout/_tool-layout.scss
@@ -23,6 +23,7 @@
     width: 100%;
     padding: $space-xl;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     z-index: z($stacking, main);
 
     @include respond-to(desktop) {
@@ -77,6 +78,7 @@
   &__sidebar {
     height: 100%;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     padding: $space-l;
   }
 
